[package]
name = "wfc3d"
version = "0.1.0"
authors = ["Liam Taylor <liam.tab@gail.com>", "Dmytro Banin <dima_banin@hotmail.com>"]
description = "A basic implementation of wave-function collapse for procedural generation in 3D"
repository = "https://github.com/OutOfTheVoid/kahuna"
homepage = "https://github.com/OutOfTheVoid/kahuna"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
exclude = [
    "Cargo.lock",
    "target",
    ".vscode"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy_utils = "0.10.0"

[dev-dependencies]
image = "0.24.2"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"